--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^3.2.25",
-    "vue-router": "^4.0.15"
+    "vue-router": "^4.0.15",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@headlessui/vue": "^1.6.2",
